k8s/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP # Uso interno
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
